@@ -33,7 +33,7 @@ class TestXPDBParser(ParserBase):
     ref_filename = XPDB_small
     expected_attrs = ['ids', 'names', 'record_types', 'resids',
                       'resnames', 'altLocs', 'icodes', 'occupancies',
-                      'bonds', 'tempfactors', 'chainIDs']
+                      'tempfactors', 'chainIDs']
     guessed_attrs = ['masses', 'types']
     expected_n_atoms = 5
     expected_n_residues = 5
